<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    tools:context=".ui.SplashScreenActivity">

    <View
        android:id="@+id/ornament_top"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        android:background="@drawable/bg_circle_ornament"
        android:backgroundTint="@color/md_theme_light_primaryContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_splash"
            app:tint="@color/md_theme_light_primary" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/schools"
            android:textColor="@color/md_theme_light_primary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mis"
            android:textColor="@color/md_theme_light_onSurfaceVariant"
            android:textSize="10sp"
            android:textStyle="bold"
            tools:ignore="SmallSp" />
    </LinearLayout>


    <View
        android:id="@+id/ornament_bottom"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="-100dp"
        android:background="@drawable/bg_circle_ornament"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>